--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,18 +13,20 @@
         android:theme="@style/Theme.Koistorynew"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".LoginActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Koistorynew.NoActionBar">
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".MainActivity" android:theme="@style/Theme.Koistorynew.NoActionBar"/>
         <activity android:name=".ui.blog.BlogDetailsActivity" />
+
 
     </application>
 
