--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
             android:name=".LoginActivity"
             android:exported="true"
             android:label="@string/app_name"
+            android:theme="@style/Theme.Koistorynew.NoActionBar"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,6 +27,7 @@
         <activity android:name=".RegisterActivity" />
         <activity android:name=".MainActivity" android:theme="@style/Theme.Koistorynew.NoActionBar"/>
         <activity android:name=".ui.blog.BlogDetailsActivity" />
+        <activity android:name=".ui.blog.CommentActivity" />
 
 
     </application>
