--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         <activity android:name=".RegisterActivity" />
         <activity android:name=".MainActivity" android:theme="@style/Theme.Koistorynew.NoActionBar"/>
         <activity android:name=".ui.blog.BlogDetailsActivity" />
-        <activity android:name=".ui.blog.CommentActivity" />
+        <activity android:name=".ui.blog.BlogCommentActivity" />
 
 
     </application>
