create UI pÃost máºarket, detail post marker and comment and add some logic

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
         <activity android:name=".MainActivity" android:theme="@style/Theme.Koistorynew.NoActionBar"/>
         <activity android:name=".ui.blog.BlogDetailsActivity" />
         <activity android:name=".ui.blog.BlogCommentActivity" />
+        <activity android:name=".ui.market.MarketDetailsActivity" />
+        <activity android:name=".ui.market.MarketCommentActivity" />
+
 
 
     </application>
