upload Image and call API

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
         <activity android:name=".ui.myconsult.MyConsultCommentActivity" />
         <activity android:name=".ui.myconsult.AddConsultActivity" />
         <activity android:name=".ui.myconsult.EditConsultActivity" />
+        <activity android:name=".ui.myconsult.EditImagesConsultActivity" />
 
     </application>
 
