--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,7 @@
         <activity android:name=".ui.myconsult.EditImagesConsultActivity" />
 
         <activity android:name=".CameraActivity" android:exported="true" />
+        <activity android:name=".EmailAndCameraActivity" android:exported="true" />
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.koistorynew.fileprovider"
