--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,10 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-feature android:name="android.hardware.camera" android:required="false" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -30,7 +33,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RegisterActivity" android:exported="true"/>
+        <activity
+            android:name=".RegisterActivity"
+            android:exported="true" />
+        <activity
+            android:name=".RegisterActivityV1"
+            android:exported="true" />
+
         <activity
             android:name=".MainActivity"
             android:theme="@style/Theme.Koistorynew.NoActionBar" />
@@ -49,8 +58,19 @@
         <activity android:name=".ui.myconsult.EditConsultActivity" />
         <activity android:name=".ui.myconsult.EditImagesConsultActivity" />
 
-        <activity android:name=".CameraActivity" android:exported="true" />
-        <activity android:name=".EmailAndCameraActivity" android:exported="true" />
+        <activity
+            android:name=".CameraActivity"
+            android:exported="true" />
+        <activity
+            android:name=".LoginWithFaceV2Activity"
+            android:exported="true" />
+        <activity
+            android:name=".LoginWithFaceAndEmailV1"
+            android:exported="true" />
+        <activity
+            android:name=".LoginWithFaceAndEmailV2"
+            android:exported="true" />
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.koistorynew.fileprovider"
