--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
@@ -22,27 +21,27 @@
         android:theme="@style/Theme.Koistorynew"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+
+        <!-- Di chuyển intent-filter sang MainActivity -->
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/Theme.Koistorynew.NoActionBar"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <activity
             android:name=".LoginActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Koistorynew.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".RegisterActivity"
-            android:exported="true" />
-        <activity
-            android:name=".RegisterActivityV1"
-            android:exported="true" />
-
-        <activity
-            android:name=".MainActivity"
             android:theme="@style/Theme.Koistorynew.NoActionBar" />
+
+        <!-- Các activity khác giữ nguyên -->
+        <activity android:name=".RegisterActivity" android:exported="true" />
+        <activity android:name=".RegisterActivityV1" android:exported="true" />
         <activity android:name=".ui.blog.BlogDetailsActivity" />
         <activity android:name=".ui.blog.BlogCommentActivity" />
         <activity android:name=".ui.market.MarketDetailsActivity" />
@@ -57,19 +56,10 @@
         <activity android:name=".ui.myconsult.AddConsultActivity" />
         <activity android:name=".ui.myconsult.EditConsultActivity" />
         <activity android:name=".ui.myconsult.EditImagesConsultActivity" />
-
-        <activity
-            android:name=".CameraActivity"
-            android:exported="true" />
-        <activity
-            android:name=".LoginWithFaceV2Activity"
-            android:exported="true" />
-        <activity
-            android:name=".LoginWithFaceAndEmailV1"
-            android:exported="true" />
-        <activity
-            android:name=".LoginWithFaceAndEmailV2"
-            android:exported="true" />
+        <activity android:name=".CameraActivity" android:exported="true" />
+        <activity android:name=".LoginWithFaceV2Activity" android:exported="true" />
+        <activity android:name=".LoginWithFaceAndEmailV1" android:exported="true" />
+        <activity android:name=".LoginWithFaceAndEmailV2" android:exported="true" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -82,6 +72,4 @@
         </provider>
 
     </application>
-
-
 </manifest>
